fix scrollabilty on mobile and other queries

--- a/myxo.css
+++ b/myxo.css
@@ -87,7 +87,7 @@ h1 {
 }
 .players {
   position: absolute;
-  left:0;
+  left: 0;
   top: 514px;
   display: flex;
   flex-direction: column;
@@ -154,6 +154,7 @@ h1 {
   display: none;
   position: absolute;
   inset: 0;
+  height: 100vh;
   margin: auto;
   background: rgba(0, 0, 0, 0.6);
   font-size: 76px;
@@ -170,9 +171,9 @@ h1 {
   font-weight: bold;
 }
 @media screen and (max-width: 1240px) and (min-width: 1121px) {
-  .players{
-  max-width: 300px;
-  transition: all 0.2s;
+  .players {
+    max-width: 300px;
+    transition: all 0.2s;
   }
   .player {
     font-size: 20px;
@@ -181,32 +182,31 @@ h1 {
   #winnerPopUp {
     font-size: 68px;
   }
- 
 }
 @media screen and (max-width: 1120px) and (min-width: 768px) {
   h1 {
-  font-size: 70px;
-  border-radius: 20px;
-  max-width: 900px;
-  transition: all 0.2s;
-}
+    font-size: 70px;
+    border-radius: 20px;
+    max-width: 900px;
+    transition: all 0.2s;
+  }
   #game {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.2s;
-}
-.players {
-  max-width: 280px;
-  height: 160px;
-  top: 435px;
-  transition: all 0.2s;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s;
+  }
+  .players {
+    max-width: 280px;
+    height: 160px;
+    top: 435px;
+    transition: all 0.2s;
+  }
   .player {
     font-size: 18px;
     transition: all 0.2s;
   }
- 
+
   .cell {
     width: 110px;
     height: 110px;
@@ -225,45 +225,45 @@ h1 {
   }
 }
 @media screen and (max-width: 970px) and (min-width: 901px) {
-  .players{
-  max-width: 250px;
-  transition: all 0.2s;
+  .players {
+    max-width: 250px;
+    transition: all 0.2s;
   }
   .player {
     font-size: 16px;
   }
- 
 }
 @media screen and (max-width: 900px) and (min-width: 510px) {
   h1 {
-  font-size: 80px;
-  border-radius: 30px;
-  max-width: 800px;
-  margin-bottom: 50px;
-}
+    font-size: 80px;
+    border-radius: 30px;
+    max-width: 800px;
+    margin-bottom: 30px;
+  }
   #game {
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 688px;
-}
-.players {
-  max-width: 500px;
-  height: 200px;
-  position: static;
-  margin: 0 auto;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  transition: all 0.2s;
-}
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .players {
+    max-width: 500px;
+    height: 200px;
+    position: static;
+    margin: 0 auto;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    transition: all 0.2s;
+  }
   .player {
     font-size: 26px;
     transition: all 0.2s;
   }
- 
+  #board {
+    margin-bottom: 20px;
+  }
   .cell {
-    width: 130px;
-    height: 130px;
+    width: 125px;
+    height: 125px;
     border-width: 5px;
     transition: all 0.2s;
   }
@@ -279,52 +279,53 @@ h1 {
   }
 }
 @media screen and (max-width: 509px) {
-   h1 {
-  font-size: 55px;
-  max-width: 500px;
-  margin-bottom: 50px;
-}
-.enterNames {
-  width: 90%;
-  max-width: 430px;
-  height: 300px;
-  font-size: 18px;
-}
-.playerInstruction {
-  padding: 10px 0px;
-}
-.playerName {
-  padding: 8px 0 8px 5px;
-  margin-left: 7px;
-  font-size: 13px;
-}
+  h1 {
+    font-size: 55px;
+    max-width: 500px;
+    margin-bottom: 50px;
+  }
+  .enterNames {
+    width: 90%;
+    max-width: 430px;
+    height: 300px;
+    font-size: 18px;
+  }
+  .playerInstruction {
+    padding: 10px 0px;
+  }
+  .playerName {
+    padding: 8px 0 8px 5px;
+    margin-left: 7px;
+    font-size: 13px;
+  }
   #game {
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 688px;
-}
-.players {
-  max-width: 500px;
-  height: 200px;
-  position: static;
-  margin: 0 auto;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  transition: all 0.2s;
-}
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .players {
+    max-width: 500px;
+    height: 180px;
+    position: static;
+    margin: 0 auto;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    transition: all 0.2s;
+  }
   .player {
     font-size: 26px;
     transition: all 0.2s;
   }
- 
+  #board {
+    margin-bottom: 50px;
+  }
   .cell {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     border-width: 5px;
     transition: all 0.2s;
   }
-  .XO{
+  .XO {
     font-size: 80px;
   }
   #winnerPopUp {
